--- a/normadcoders/javascript-for-beginners/momentum/index.html
+++ b/normadcoders/javascript-for-beginners/momentum/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Momentum</title>
 </head>
+
 <body>
-$END$
+  <div id="quote">
+    <span></span>
+    <span></span>
+  </div>
+  <script src="js/quotes.js"></script>
+  <script src="js/backgrounds.js"></script>
 </body>
+
 </html>
