--- a/normadcoders/javascript-for-beginners/momentum/index.html
+++ b/normadcoders/javascript-for-beginners/momentum/index.html
@@ -8,12 +8,17 @@
 </head>
 
 <body>
+  <form id="todo-form">
+    <input type="text" placeholder="Write a To Do and Press Enter" required />
+  </form>
+  <ul id="todo-list"></ul>
   <div id="quote">
     <span></span>
     <span></span>
   </div>
   <script src="js/quotes.js"></script>
   <script src="js/backgrounds.js"></script>
+  <script src="js/todo.js"></script>
 </body>
 
 </html>
